--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,14 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-test = ["pytest"]
+analyses = [
+    "xarray",
+    "dask",
+    "seaborn",
+    "scipy",
+    "pybids",
+]
+test = ["pytest", "pytest-cov", "coverage"]
 doc = ["sphinx"]
 
 [project.urls]
@@ -48,3 +55,17 @@ q1k-tracking = "q1k.tracking.cli:main"
 
 [tool.setuptools.packages.find]
 include = ["q1k*"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = "-v --tb=short"
+
+[tool.ruff]
+line-length = 100
+target-version = "py310"
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "I"]
+
+[tool.codespell]
+skip = "*.ipynb,*.html,*.css"
